gccida/c1/make_nan
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_nan/src/real.c:6812:50: error: must use 'enum' tag to refer to type 'machine_mode'
void  make_nan( unsigned __int16 *nan, int sign, machine_mode mode) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_nan/src/real.c:6824:22: error: subscripted value is not an array, pointer, or vector
v5 = *(int *)0x6C5178[v3]; 
             ~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_nan/src/real.c:6825:9: error: use of undeclared identifier 'off_6C5190'
v6 = ( &off_6C5190)[v3]; 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/make_nan/src/obj/real.o] Error 1
